@@ -5,7 +5,7 @@ Imports: graphics, grDevices, stats, methods, utils, segmented,
         foreach, doSNOW, parallel
 Depends: survival, fastmatch
 Suggests: knitr, RColorBrewer, rmarkdown
-Version: 0.4.3
+Version: 0.4.4
 Author: Tianchen Xu [aut, cre] (<https://orcid.org/0000-0002-0102-7630>)
 Maintainer: Tianchen Xu <zjph602xutianchen@gmail.com>
 Description: Build piecewise exponential survival model for study design (planning) and event/timeline prediction. 
@@ -15,6 +15,6 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 VignetteBuilder: knitr
 Repository: CRAN
-Packaged: 2023-12-17 02:52:57 UTC; Peter
-Date/Publication: 2023-12-17 07:30:06 UTC
+Packaged: 2024-02-01 10:54:42 UTC; xut13
+Date/Publication: 2024-02-01 15:00:05 UTC
 NeedsCompilation: no
