@@ -1,4 +1,4 @@
-02dd411ca2db4ce7298c99ae67b02336 *DESCRIPTION
+ffb98a915ea559c952661d2a63f77d3b *DESCRIPTION
 7b19cbd88e130f76d382e526c63c9f87 *LICENSE
 3a38ca03bae3acc18abce7187e9eb1d1 *NAMESPACE
 bd9f881b083d8aca5952f7f0b476d463 *R/fitting.R
@@ -7,23 +7,23 @@ abc05914b31c73c4c583799243c1adba *R/prediction.R
 79ed7a0a0bf97b029e5b2d78f00aa73a *R/preprocess.R
 48bdb7a192cb6b1c96af627b8fb7000d *R/pwexp.R
 23c570dc6f89d463e22e0eaea60e61e8 *R/sim_followup_fun.R
-987afde32069610a89dce6eb724037a0 *R/simdata.R
+0d39bd0a6d9f5c8268c9741beaab61aa *R/simdata.R
 30bda20055d05daff29e62a147e73e7f *README.md
-fa42e825694a3fc7394f65dfea9769c9 *build/vignette.rds
-47f53f650d1d624da1090089312043e9 *inst/NEWS.Rd
+ed923d5f33c03eebb450e06a645a6d47 *build/vignette.rds
+b4d4de8eabbc8bf8bbeb46a1bdc11d92 *inst/NEWS.Rd
 e3280a06e24d519063d1bf5835dc8e84 *inst/doc/Theory_Notes.R
 d453c87930c4ec47380892d785f2a0de *inst/doc/Theory_Notes.Rmd
-382a4856176de9114e5c7037a92ec4e9 *inst/doc/Theory_Notes.html
+5368456b5a6a15737a617fbb82f9faad *inst/doc/Theory_Notes.html
 705a154bd8044c51bae1bed52ada0fa8 *man/boot_fit_pwexp.Rd
 bba1e9d8429a5cda826f7bf24fba4c8c *man/cut_dat.Rd
 3d4b6c4a8e38f5fbefdbc9f422aa9bdc *man/cv_fit_pwexp.Rd
 1f8e3a456c8c192022ce8fa87a164dcc *man/fit_pwexp.Rd
 3262418d42b8a5a0858b5370345217cb *man/plot_event.Rd
 9105f9f3bd92dec2ab005751a4c59b55 *man/plot_km.Rd
-72f76154acb43b4b7eed29698cbdb63f *man/predict.Rd
+31c8d58372c1e7c8fd59d5354cf9e616 *man/predict.Rd
 db1b68c92913084071409cd31090ba58 *man/pwexp.Rd
 eb5becb9d8c72482d4d582c51a5a35f7 *man/pwexp_conditional.Rd
-9d8245f7aef6ce48d542499d7be647ff *man/sim_followup.Rd
-048c9506a7d17527efa8e52e807f3452 *man/simdata.Rd
+30607f5f62af8a753ac10c61ecad4ffa *man/sim_followup.Rd
+594a18f5725077f2f345a254f715cfd4 *man/simdata.Rd
 d453c87930c4ec47380892d785f2a0de *vignettes/Theory_Notes.Rmd
 a36d0bd970aeb9bdcb45701b8764beb0 *vignettes/estimation.png
